// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterForm should render component with apps and categories 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <form>
        <mock-styled.div
          classname="mock-css.
  margin-bottom: 2.5rem;
"
        >
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                id="test-static-id"
                name="searchTerm"
                type="search"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                App or Developer Name
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                id="test-static-id"
                name="companyName"
                type="search"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                Company Name
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                id="test-static-id"
                name="id"
                type="search"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                App Id
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                id="test-static-id"
                name="registeredFrom"
                type="date"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                Registered From
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                id="test-static-id"
                name="registeredTo"
                type="date"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                Registered To
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                id="test-static-id"
                name="publicListedDateFrom"
                type="date"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                Publicly Listed From
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                id="test-static-id"
                name="publicListedDateTo"
                type="date"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                Publicly Listed To
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.label>
              In Public AppMarket
            </mock-styled.label>
            <mock-styled.div
              classname="mock-css."
            >
              <mock-styled.input
                id="option-public-all"
                name="isPublic"
                type="radio"
                value=""
              />
              <mock-styled.label
                classname="mock-css."
                htmlfor="option-public-all"
              >
                <mock-styled.span>
                  All
                </mock-styled.span>
              </mock-styled.label>
              <mock-styled.input
                id="option-public-true"
                name="isPublic"
                type="radio"
                value="true"
              />
              <mock-styled.label
                classname="mock-css."
                htmlfor="option-public-true"
              >
                <mock-styled.span>
                  Public
                </mock-styled.span>
              </mock-styled.label>
              <mock-styled.input
                id="option-public-false"
                name="isPublic"
                type="radio"
                value="false"
              />
              <mock-styled.label
                classname="mock-css."
                htmlfor="option-public-false"
              >
                <mock-styled.span>
                  Private
                </mock-styled.span>
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.label>
              Integration or AC Enabled
            </mock-styled.label>
            <mock-styled.div
              classname="mock-css."
            >
              <mock-styled.input
                id="option-integration-all"
                name="isDirectApi"
                type="radio"
                value=""
              />
              <mock-styled.label
                classname="mock-css."
                htmlfor="option-integration-all"
              >
                <mock-styled.span>
                  All
                </mock-styled.span>
              </mock-styled.label>
              <mock-styled.input
                id="option-integration-true"
                name="isDirectApi"
                type="radio"
                value="true"
              />
              <mock-styled.label
                classname="mock-css."
                htmlfor="option-integration-true"
              >
                <mock-styled.span>
                  Integration
                </mock-styled.span>
              </mock-styled.label>
              <mock-styled.input
                id="option-integration-false"
                name="isDirectApi"
                type="radio"
                value="false"
              />
              <mock-styled.label
                classname="mock-css."
                htmlfor="option-integration-false"
              >
                <mock-styled.span>
                  AC App
                </mock-styled.span>
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.label>
              Publicly Listed
            </mock-styled.label>
            <mock-styled.div
              classname="mock-css."
            >
              <mock-styled.input
                id="option-listed-all"
                name="isListed"
                type="radio"
                value=""
              />
              <mock-styled.label
                classname="mock-css."
                htmlfor="option-listed-all"
              >
                <mock-styled.span>
                  All
                </mock-styled.span>
              </mock-styled.label>
              <mock-styled.input
                id="option-listed-true"
                name="isListed"
                type="radio"
                value="true"
              />
              <mock-styled.label
                classname="mock-css."
                htmlfor="option-listed-true"
              >
                <mock-styled.span>
                  Listed
                </mock-styled.span>
              </mock-styled.label>
              <mock-styled.input
                id="option-listed-false"
                name="isListed"
                type="radio"
                value="false"
              />
              <mock-styled.label
                classname="mock-css."
                htmlfor="option-listed-false"
              >
                <mock-styled.span>
                  Development
                </mock-styled.span>
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.label>
            Categories
          </mock-styled.label>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                id="category"
                name="category"
              />
              <mock-styled.div
                classname=""
              >
                <mock-styled.span
                  classname="mock-css.
  margin-left: 0.375rem;
 mock-css.
  font-size: 2.5rem;
"
                >
                  <svg />
                </mock-styled.span>
                <p>
                  Please select from the options below
                </p>
              </mock-styled.div>
              <mock-styled.div
                classname=""
              >
                <mock-styled.input
                  id="test-static-id"
                  type="checkbox"
                />
                <mock-styled.label
                  classname="mock-css."
                  htmlfor="test-static-id"
                >
                  string
                </mock-styled.label>
                <mock-styled.input
                  id="test-static-id"
                  type="checkbox"
                />
                <mock-styled.label
                  classname="mock-css."
                  htmlfor="test-static-id"
                >
                  Tools
                </mock-styled.label>
                <mock-styled.input
                  id="test-static-id"
                  type="checkbox"
                />
                <mock-styled.label
                  classname="mock-css."
                  htmlfor="test-static-id"
                >
                  Social
                </mock-styled.label>
                <mock-styled.input
                  id="test-static-id"
                  type="checkbox"
                />
                <mock-styled.label
                  classname="mock-css."
                  htmlfor="test-static-id"
                >
                  Marketing
                </mock-styled.label>
                <mock-styled.input
                  id="test-static-id"
                  type="checkbox"
                />
                <mock-styled.label
                  classname="mock-css."
                  htmlfor="test-static-id"
                >
                  Communication
                </mock-styled.label>
                <mock-styled.input
                  id="test-static-id"
                  type="checkbox"
                />
                <mock-styled.label
                  classname="mock-css."
                  htmlfor="test-static-id"
                >
                  Media
                </mock-styled.label>
                <mock-styled.input
                  id="test-static-id"
                  type="checkbox"
                />
                <mock-styled.label
                  classname="mock-css."
                  htmlfor="test-static-id"
                >
                  Events
                </mock-styled.label>
                <mock-styled.input
                  id="test-static-id"
                  type="checkbox"
                />
                <mock-styled.label
                  classname="mock-css."
                  htmlfor="test-static-id"
                >
                  Finance
                </mock-styled.label>
                <mock-styled.input
                  id="test-static-id"
                  type="checkbox"
                />
                <mock-styled.label
                  classname="mock-css."
                  htmlfor="test-static-id"
                >
                  Productivity
                </mock-styled.label>
                <mock-styled.input
                  id="test-static-id"
                  type="checkbox"
                />
                <mock-styled.label
                  classname="mock-css."
                  htmlfor="test-static-id"
                >
                  Other
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </form>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <form>
      <mock-styled.div
        classname="mock-css.
  margin-bottom: 2.5rem;
"
      >
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              id="test-static-id"
              name="searchTerm"
              type="search"
            />
            <mock-styled.label
              htmlfor="test-static-id"
            >
              App or Developer Name
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              id="test-static-id"
              name="companyName"
              type="search"
            />
            <mock-styled.label
              htmlfor="test-static-id"
            >
              Company Name
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              id="test-static-id"
              name="id"
              type="search"
            />
            <mock-styled.label
              htmlfor="test-static-id"
            >
              App Id
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              id="test-static-id"
              name="registeredFrom"
              type="date"
            />
            <mock-styled.label
              htmlfor="test-static-id"
            >
              Registered From
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              id="test-static-id"
              name="registeredTo"
              type="date"
            />
            <mock-styled.label
              htmlfor="test-static-id"
            >
              Registered To
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              id="test-static-id"
              name="publicListedDateFrom"
              type="date"
            />
            <mock-styled.label
              htmlfor="test-static-id"
            >
              Publicly Listed From
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              id="test-static-id"
              name="publicListedDateTo"
              type="date"
            />
            <mock-styled.label
              htmlfor="test-static-id"
            >
              Publicly Listed To
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.label>
            In Public AppMarket
          </mock-styled.label>
          <mock-styled.div
            classname="mock-css."
          >
            <mock-styled.input
              id="option-public-all"
              name="isPublic"
              type="radio"
              value=""
            />
            <mock-styled.label
              classname="mock-css."
              htmlfor="option-public-all"
            >
              <mock-styled.span>
                All
              </mock-styled.span>
            </mock-styled.label>
            <mock-styled.input
              id="option-public-true"
              name="isPublic"
              type="radio"
              value="true"
            />
            <mock-styled.label
              classname="mock-css."
              htmlfor="option-public-true"
            >
              <mock-styled.span>
                Public
              </mock-styled.span>
            </mock-styled.label>
            <mock-styled.input
              id="option-public-false"
              name="isPublic"
              type="radio"
              value="false"
            />
            <mock-styled.label
              classname="mock-css."
              htmlfor="option-public-false"
            >
              <mock-styled.span>
                Private
              </mock-styled.span>
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.label>
            Integration or AC Enabled
          </mock-styled.label>
          <mock-styled.div
            classname="mock-css."
          >
            <mock-styled.input
              id="option-integration-all"
              name="isDirectApi"
              type="radio"
              value=""
            />
            <mock-styled.label
              classname="mock-css."
              htmlfor="option-integration-all"
            >
              <mock-styled.span>
                All
              </mock-styled.span>
            </mock-styled.label>
            <mock-styled.input
              id="option-integration-true"
              name="isDirectApi"
              type="radio"
              value="true"
            />
            <mock-styled.label
              classname="mock-css."
              htmlfor="option-integration-true"
            >
              <mock-styled.span>
                Integration
              </mock-styled.span>
            </mock-styled.label>
            <mock-styled.input
              id="option-integration-false"
              name="isDirectApi"
              type="radio"
              value="false"
            />
            <mock-styled.label
              classname="mock-css."
              htmlfor="option-integration-false"
            >
              <mock-styled.span>
                AC App
              </mock-styled.span>
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.label>
            Publicly Listed
          </mock-styled.label>
          <mock-styled.div
            classname="mock-css."
          >
            <mock-styled.input
              id="option-listed-all"
              name="isListed"
              type="radio"
              value=""
            />
            <mock-styled.label
              classname="mock-css."
              htmlfor="option-listed-all"
            >
              <mock-styled.span>
                All
              </mock-styled.span>
            </mock-styled.label>
            <mock-styled.input
              id="option-listed-true"
              name="isListed"
              type="radio"
              value="true"
            />
            <mock-styled.label
              classname="mock-css."
              htmlfor="option-listed-true"
            >
              <mock-styled.span>
                Listed
              </mock-styled.span>
            </mock-styled.label>
            <mock-styled.input
              id="option-listed-false"
              name="isListed"
              type="radio"
              value="false"
            />
            <mock-styled.label
              classname="mock-css."
              htmlfor="option-listed-false"
            >
              <mock-styled.span>
                Development
              </mock-styled.span>
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.label>
          Categories
        </mock-styled.label>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              id="category"
              name="category"
            />
            <mock-styled.div
              classname=""
            >
              <mock-styled.span
                classname="mock-css.
  margin-left: 0.375rem;
 mock-css.
  font-size: 2.5rem;
"
              >
                <svg />
              </mock-styled.span>
              <p>
                Please select from the options below
              </p>
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.input
                id="test-static-id"
                type="checkbox"
              />
              <mock-styled.label
                classname="mock-css."
                htmlfor="test-static-id"
              >
                string
              </mock-styled.label>
              <mock-styled.input
                id="test-static-id"
                type="checkbox"
              />
              <mock-styled.label
                classname="mock-css."
                htmlfor="test-static-id"
              >
                Tools
              </mock-styled.label>
              <mock-styled.input
                id="test-static-id"
                type="checkbox"
              />
              <mock-styled.label
                classname="mock-css."
                htmlfor="test-static-id"
              >
                Social
              </mock-styled.label>
              <mock-styled.input
                id="test-static-id"
                type="checkbox"
              />
              <mock-styled.label
                classname="mock-css."
                htmlfor="test-static-id"
              >
                Marketing
              </mock-styled.label>
              <mock-styled.input
                id="test-static-id"
                type="checkbox"
              />
              <mock-styled.label
                classname="mock-css."
                htmlfor="test-static-id"
              >
                Communication
              </mock-styled.label>
              <mock-styled.input
                id="test-static-id"
                type="checkbox"
              />
              <mock-styled.label
                classname="mock-css."
                htmlfor="test-static-id"
              >
                Media
              </mock-styled.label>
              <mock-styled.input
                id="test-static-id"
                type="checkbox"
              />
              <mock-styled.label
                classname="mock-css."
                htmlfor="test-static-id"
              >
                Events
              </mock-styled.label>
              <mock-styled.input
                id="test-static-id"
                type="checkbox"
              />
              <mock-styled.label
                classname="mock-css."
                htmlfor="test-static-id"
              >
                Finance
              </mock-styled.label>
              <mock-styled.input
                id="test-static-id"
                type="checkbox"
              />
              <mock-styled.label
                classname="mock-css."
                htmlfor="test-static-id"
              >
                Productivity
              </mock-styled.label>
              <mock-styled.input
                id="test-static-id"
                type="checkbox"
              />
              <mock-styled.label
                classname="mock-css."
                htmlfor="test-static-id"
              >
                Other
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`FilterForm should render component with no apps or categories 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <form>
        <mock-styled.div
          classname="mock-css.
  margin-bottom: 2.5rem;
"
        >
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                id="test-static-id"
                name="searchTerm"
                type="search"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                App or Developer Name
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                id="test-static-id"
                name="companyName"
                type="search"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                Company Name
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                id="test-static-id"
                name="id"
                type="search"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                App Id
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                id="test-static-id"
                name="registeredFrom"
                type="date"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                Registered From
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                id="test-static-id"
                name="registeredTo"
                type="date"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                Registered To
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                id="test-static-id"
                name="publicListedDateFrom"
                type="date"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                Publicly Listed From
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                id="test-static-id"
                name="publicListedDateTo"
                type="date"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                Publicly Listed To
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.label>
              In Public AppMarket
            </mock-styled.label>
            <mock-styled.div
              classname="mock-css."
            >
              <mock-styled.input
                id="option-public-all"
                name="isPublic"
                type="radio"
                value=""
              />
              <mock-styled.label
                classname="mock-css."
                htmlfor="option-public-all"
              >
                <mock-styled.span>
                  All
                </mock-styled.span>
              </mock-styled.label>
              <mock-styled.input
                id="option-public-true"
                name="isPublic"
                type="radio"
                value="true"
              />
              <mock-styled.label
                classname="mock-css."
                htmlfor="option-public-true"
              >
                <mock-styled.span>
                  Public
                </mock-styled.span>
              </mock-styled.label>
              <mock-styled.input
                id="option-public-false"
                name="isPublic"
                type="radio"
                value="false"
              />
              <mock-styled.label
                classname="mock-css."
                htmlfor="option-public-false"
              >
                <mock-styled.span>
                  Private
                </mock-styled.span>
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.label>
              Integration or AC Enabled
            </mock-styled.label>
            <mock-styled.div
              classname="mock-css."
            >
              <mock-styled.input
                id="option-integration-all"
                name="isDirectApi"
                type="radio"
                value=""
              />
              <mock-styled.label
                classname="mock-css."
                htmlfor="option-integration-all"
              >
                <mock-styled.span>
                  All
                </mock-styled.span>
              </mock-styled.label>
              <mock-styled.input
                id="option-integration-true"
                name="isDirectApi"
                type="radio"
                value="true"
              />
              <mock-styled.label
                classname="mock-css."
                htmlfor="option-integration-true"
              >
                <mock-styled.span>
                  Integration
                </mock-styled.span>
              </mock-styled.label>
              <mock-styled.input
                id="option-integration-false"
                name="isDirectApi"
                type="radio"
                value="false"
              />
              <mock-styled.label
                classname="mock-css."
                htmlfor="option-integration-false"
              >
                <mock-styled.span>
                  AC App
                </mock-styled.span>
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.label>
              Publicly Listed
            </mock-styled.label>
            <mock-styled.div
              classname="mock-css."
            >
              <mock-styled.input
                id="option-listed-all"
                name="isListed"
                type="radio"
                value=""
              />
              <mock-styled.label
                classname="mock-css."
                htmlfor="option-listed-all"
              >
                <mock-styled.span>
                  All
                </mock-styled.span>
              </mock-styled.label>
              <mock-styled.input
                id="option-listed-true"
                name="isListed"
                type="radio"
                value="true"
              />
              <mock-styled.label
                classname="mock-css."
                htmlfor="option-listed-true"
              >
                <mock-styled.span>
                  Listed
                </mock-styled.span>
              </mock-styled.label>
              <mock-styled.input
                id="option-listed-false"
                name="isListed"
                type="radio"
                value="false"
              />
              <mock-styled.label
                classname="mock-css."
                htmlfor="option-listed-false"
              >
                <mock-styled.span>
                  Development
                </mock-styled.span>
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </form>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <form>
      <mock-styled.div
        classname="mock-css.
  margin-bottom: 2.5rem;
"
      >
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              id="test-static-id"
              name="searchTerm"
              type="search"
            />
            <mock-styled.label
              htmlfor="test-static-id"
            >
              App or Developer Name
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              id="test-static-id"
              name="companyName"
              type="search"
            />
            <mock-styled.label
              htmlfor="test-static-id"
            >
              Company Name
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              id="test-static-id"
              name="id"
              type="search"
            />
            <mock-styled.label
              htmlfor="test-static-id"
            >
              App Id
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              id="test-static-id"
              name="registeredFrom"
              type="date"
            />
            <mock-styled.label
              htmlfor="test-static-id"
            >
              Registered From
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              id="test-static-id"
              name="registeredTo"
              type="date"
            />
            <mock-styled.label
              htmlfor="test-static-id"
            >
              Registered To
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              id="test-static-id"
              name="publicListedDateFrom"
              type="date"
            />
            <mock-styled.label
              htmlfor="test-static-id"
            >
              Publicly Listed From
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              id="test-static-id"
              name="publicListedDateTo"
              type="date"
            />
            <mock-styled.label
              htmlfor="test-static-id"
            >
              Publicly Listed To
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.label>
            In Public AppMarket
          </mock-styled.label>
          <mock-styled.div
            classname="mock-css."
          >
            <mock-styled.input
              id="option-public-all"
              name="isPublic"
              type="radio"
              value=""
            />
            <mock-styled.label
              classname="mock-css."
              htmlfor="option-public-all"
            >
              <mock-styled.span>
                All
              </mock-styled.span>
            </mock-styled.label>
            <mock-styled.input
              id="option-public-true"
              name="isPublic"
              type="radio"
              value="true"
            />
            <mock-styled.label
              classname="mock-css."
              htmlfor="option-public-true"
            >
              <mock-styled.span>
                Public
              </mock-styled.span>
            </mock-styled.label>
            <mock-styled.input
              id="option-public-false"
              name="isPublic"
              type="radio"
              value="false"
            />
            <mock-styled.label
              classname="mock-css."
              htmlfor="option-public-false"
            >
              <mock-styled.span>
                Private
              </mock-styled.span>
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.label>
            Integration or AC Enabled
          </mock-styled.label>
          <mock-styled.div
            classname="mock-css."
          >
            <mock-styled.input
              id="option-integration-all"
              name="isDirectApi"
              type="radio"
              value=""
            />
            <mock-styled.label
              classname="mock-css."
              htmlfor="option-integration-all"
            >
              <mock-styled.span>
                All
              </mock-styled.span>
            </mock-styled.label>
            <mock-styled.input
              id="option-integration-true"
              name="isDirectApi"
              type="radio"
              value="true"
            />
            <mock-styled.label
              classname="mock-css."
              htmlfor="option-integration-true"
            >
              <mock-styled.span>
                Integration
              </mock-styled.span>
            </mock-styled.label>
            <mock-styled.input
              id="option-integration-false"
              name="isDirectApi"
              type="radio"
              value="false"
            />
            <mock-styled.label
              classname="mock-css."
              htmlfor="option-integration-false"
            >
              <mock-styled.span>
                AC App
              </mock-styled.span>
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.label>
            Publicly Listed
          </mock-styled.label>
          <mock-styled.div
            classname="mock-css."
          >
            <mock-styled.input
              id="option-listed-all"
              name="isListed"
              type="radio"
              value=""
            />
            <mock-styled.label
              classname="mock-css."
              htmlfor="option-listed-all"
            >
              <mock-styled.span>
                All
              </mock-styled.span>
            </mock-styled.label>
            <mock-styled.input
              id="option-listed-true"
              name="isListed"
              type="radio"
              value="true"
            />
            <mock-styled.label
              classname="mock-css."
              htmlfor="option-listed-true"
            >
              <mock-styled.span>
                Listed
              </mock-styled.span>
            </mock-styled.label>
            <mock-styled.input
              id="option-listed-false"
              name="isListed"
              type="radio"
              value="false"
            />
            <mock-styled.label
              classname="mock-css."
              htmlfor="option-listed-false"
            >
              <mock-styled.span>
                Development
              </mock-styled.span>
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
